Add MainActivity and ConfigurationFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Interval Timer</string>
+    <string name="choose_settings">Choose settings</string>
 </resources>
