Add NumberChooserView. - Added Google Truth and AndroidX Rules libs. - Added BlankActivity (TODO: Move into androidTest source root, or remove later).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Interval Timer</string>
     <string name="choose_settings">Choose settings</string>
+    <string name="intervals">Intervals</string>
+    <string name="increment">+</string>
+    <string name="decrement">-</string>
 </resources>
