--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="intervals">Intervals</string>
     <string name="increment">+</string>
     <string name="decrement">-</string>
+    <string name="done">Done</string>
 </resources>
