--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="increment">+</string>
     <string name="decrement">-</string>
     <string name="done">Done</string>
+
+    <string name="timer">Timer</string>
 </resources>
