TimerFragment counts down work time when started. (Test passing, but needs refactor.)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="done">Done</string>
 
     <string name="timer">Timer</string>
+    <string name="start">Start</string>
 </resources>
