Add pause button to timer UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="timer">Timer</string>
     <string name="start">Start</string>
+    <string name="pause">Pause</string>
 </resources>
